[gd_scene load_steps=4 format=2]

[ext_resource path="res://game_objects/mechanics/Toilet.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/toilet_flush.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 16, 16 )

[node name="Toilet" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=[
"toilet",
]]
stream = ExtResource( 2 )
volume_db = -2.094
max_distance = 500.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
